k8s/worker-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $CONTAINER_NAME
  namespace: $K8S_NAMESPACE
spec:
  replicas: $K8S_REPLICA_COUNT_WORKER
  selector:
    matchLabels:
      app: $CONTAINER_NAME
  template:
    metadata:
      labels:
        app: $CONTAINER_NAME
    spec:
      containers:
        - name: $CONTAINER_NAME
          image: $REGISTRY/$IMAGE
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: '$K8S_MEMORY_REQUESTS'
              cpu: '$K8S_CPU_REQUESTS'
            limits:
              memory: '$K8S_MEMORY_LIMITS'
              cpu: '$K8S_CPU_LIMITS'
---
apiVersion: v1
kind: Service
metadata:
  name: $CONTAINER_NAME
  namespace: $K8S_NAMESPACE
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: $CONTAINER_NAME
---
